# RayView

./: .gitignore  autostatesave.init  background.bib
background/: background.bib  background.tex  checkpoint2.tex
checkpoint1/: checkpoint1.tex
classproject/final/: FinalPresentation.pptx
documentation/: BVH_File_Format.txt  GroupMeetingPresentation.pptx  Ray_Trace_File_Format.txt
embree-1.0beta/: CMakeLists.txt  README.txt  embree_vs2008.sln  embree_vs2010.sln
embree-1.0beta/app/: CMakeLists.txt  app.icproj  app.vcproj  app.vcxproj  embree.cpp  embreedevice.cpp  embreedevice.h  glutdisplay.cpp  glutdisplay.h  regression.cpp  regression.h  scene.cpp  scene.h
embree-1.0beta/common/: CMakeLists.txt  common.icproj  common.vcproj  common.vcxproj
embree-1.0beta/common/sys/: CMakeLists.txt  constants.h  filename.cpp  filename.h  intrinsics.h  library.cpp  library.h  platform.cpp  platform.h  ref.h  sysinfo.cpp  sysinfo.h  tasking.cpp  tasking.h  thread.cpp  thread.h
embree-1.0beta/common/sys/stl/: array2d.h  string.cpp  string.h  vector.h
embree-1.0beta/common/sys/sync/: atomic.h  barrier.h  condition.cpp  condition.h  mutex.cpp  mutex.h
embree-1.0beta/models/: consistent_normals.ecs  consistent_normals.xml  cornell_box.ecs  cornell_box_spheres.xml  sphere_carpaint.xml  sphere_glass.xml
embree-1.0beta/renderer/: CMakeLists.txt  default.h  renderer.icproj  renderer.vcproj  renderer.vcxproj
embree-1.0beta/renderer/api/: api.cpp  api.h  film.h  instance.h  parms.h  scene.h  variant.h
embree-1.0beta/renderer/brdfs/: brdf.h  compositedbrdf.h  conductor.h  dielectric.h  dielectriclayer.h  lambertian.h  microfacet.h  minnaert.h  optics.h  reflection.h  specular.h  transmission.h  velvety.h
embree-1.0beta/renderer/cameras/: camera.h  pinholecamera.h
embree-1.0beta/renderer/filters/: boxfilter.h  bsplinefilter.h  filter.cpp  filter.h
embree-1.0beta/renderer/integrators/: integrator.h  pathtraceintegrator.cpp  pathtraceintegrator.h
embree-1.0beta/renderer/lights/: ambientlight.h  directionallight.h  distantlight.h  hdrilight.cpp  hdrilight.h  light.h  pointlight.h  spotlight.h  trianglelight.h
embree-1.0beta/renderer/materials/: dielectric.h  material.h  matte.h  matte_textured.h  medium.h  metal.h  metallicpaint.h  mirror.h  obj.h  plastic.h  thindielectric.h  velvet.h
embree-1.0beta/renderer/renderers/: debugrenderer.cpp  debugrenderer.h  integratorrenderer.cpp  integratorrenderer.h  renderer.h
embree-1.0beta/renderer/samplers/: distribution1d.cpp  distribution1d.h  distribution2d.cpp  distribution2d.h  patterns.h  sample.h  sampler.cpp  sampler.h  shapesampler.h
embree-1.0beta/renderer/shapes/: differentialgeometry.h  shape.h  triangle.h  trianglemesh.cpp  trianglemesh.h  trianglemesh_consistent_normals.cpp  trianglemesh_consistent_normals.h  trianglemesh_normals.cpp  trianglemesh_normals.h
embree-1.0beta/renderer/textures/: nearestneighbor.h  texture.h
embree-1.0beta/rtcore/: BVH2Printer.cpp  BVH2Printer.h  PrintingTraverser.cpp  PrintingTraverser.h  hit.h  ray.h  rtcore.cpp  rtcore.h  rtcore.icproj  rtcore.vcproj  (+1 more)
final/: FinalPresentation.pptx  final.tex
rayview/: autostatesave.init
traces/: Analyze_Build_Methods.m  Analyze_Full_TU_vs_PU.m  Analyze_Full_T_vs_P.m  Analyze_RayOrder_vs_ODF.m  Counter.m
(+301 files in other folders)
